[package]
name = "tyr"
version = "0.1.2"
edition = "2024"
authors = ["苏向夜 <fu050409@163.com>"]
readme = "README.md"
license = "AGPL-3.0"
description = "A high-performance, cross-platform and all-protocol network combat attack payload and policy library"

[dependencies]
anyhow = "1.0.95"
fastrand = "2.3.0"
nix = { version = "0.29.0", features = ["user"] }
pnet = "0.35.0"
thiserror = "2.0.11"
